<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

	<Button
		android:id="@+id/connect"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="12dip"
		android:textSize="16sp" 
		android:text="@string/connect" />
	    
	<Button
		android:id="@+id/disconnect"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="12dip"
		android:textSize="16sp" 
	
		android:text="@string/disconnect" />
	 
	<Button
		android:id="@+id/edit"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="12dip"
		android:textSize="16sp" 
		android:text="@string/edit" />

</LinearLayout>	

</ScrollView>    
