<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+android:id/helpScreenScrollView" android:layout_height="fill_parent"
	android:layout_width="fill_parent">

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+android:id/editNetworkOverallLayout"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:orientation="vertical">

		<TableLayout android:id="@+id/TableLayout01"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:stretchColumns="1">
			<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<TextView android:id="@+android:id/nicknameTextView"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/title_nickname" android:textSize="18sp" />
				<EditText android:id="@+android:id/nicknameEditText"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_marginLeft="3dip" android:layout_marginRight="3dip"
					android:lines="1" android:autoText="true" android:capitalize="words"
					android:layout_weight="1" android:freezesText="true" />
			</TableRow>


			<TableRow android:id="@+id/TableRow03" android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<TextView android:id="@+android:id/IPSecGatewayTextView"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/title_IPSec_gateway_preference"
					android:textSize="18sp" />
				<EditText android:id="@+android:id/IPSecGatewayEditText"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_marginLeft="3dip" android:layout_marginRight="3dip"
					android:lines="1" android:autoText="true"
					android:layout_weight="1" android:freezesText="true" />
			</TableRow>
			<TableRow android:id="@+id/TableRow06" android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<TextView android:id="@+android:id/IPSecIDTextView"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/title_IPSec_ID_preference" android:textSize="18sp" />
				<EditText android:id="@+android:id/IPSecIDEditText"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_marginLeft="3dip" android:layout_marginRight="3dip"
					android:lines="1" android:autoText="true"
					android:layout_weight="1" android:freezesText="true" />
			</TableRow>
			<TableRow android:id="@+id/TableRow07" android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<TextView android:id="@+android:id/IPSecSecretTextView"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/title_IPSec_secret_preference"
					android:textSize="18sp" />
				<EditText android:id="@+android:id/IPSecSecretEditText"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_marginLeft="3dip" android:layout_marginRight="3dip"
					android:lines="1" android:autoText="true" android:password="true"
					android:layout_weight="1" android:freezesText="true" />
			</TableRow>
			<TableRow android:id="@+id/TableRow08" android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<TextView android:id="@+android:id/xauthTextView"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/title_username_preference" android:textSize="18sp" />
				<EditText android:id="@+android:id/xauthEditText"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_marginLeft="3dip" android:layout_marginRight="3dip"
					android:lines="1" android:autoText="true"
					android:layout_weight="1" android:freezesText="true" />
			</TableRow>
			<TableRow android:id="@+id/TableRow09" android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<TextView android:id="@+android:id/passwordTextView"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/title_password_preference" android:textSize="18sp" />
				<EditText android:id="@+android:id/passwordEditText"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_marginLeft="3dip" android:layout_marginRight="3dip"
					android:lines="1" android:autoText="true" android:password="true"
					android:layout_weight="1" android:freezesText="true" />
			</TableRow>
			<TableRow android:id="@+id/TableRow10" android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<TextView android:id="@+android:id/tokenAuthenticationTextView"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/token_authentication" android:textSize="18sp" />
				<CheckBox android:id="@+android:id/tokenAuthenticationCheckBox"
					/>
			</TableRow>
			<TableRow android:id="@+id/TableRow11" android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<TextView android:id="@+android:id/timeoutTextView"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/timeout" android:textSize="18sp" />
				<EditText android:id="@+android:id/timeoutEditText"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_marginLeft="3dip" android:layout_marginRight="3dip"
					android:lines="1" android:numeric="decimal"
					android:layout_weight="1" android:freezesText="true" />
			</TableRow>
		</TableLayout>

		<LinearLayout android:id="@+android:id/addNetworkButtonLayout"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:layout_gravity="bottom" android:orientation="horizontal">
			<Button android:id="@+android:id/editNetworkAddButton"
				android:text="@string/add" android:layout_weight="1"
				android:layout_width="0dip" android:layout_height="wrap_content"
				android:layout_gravity="bottom" />
			<Button android:id="@+android:id/editNetworkCancelButton"
				android:text="@string/cancel" android:layout_weight="1"
				android:layout_width="0dip" android:layout_height="wrap_content"
				android:layout_gravity="bottom" />
		</LinearLayout>
		<LinearLayout android:id="@+android:id/editNetworkButtonLayout"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:layout_gravity="bottom" android:orientation="horizontal">
			<Button android:id="@+android:id/editNetworkUpdateButton"
				android:text="@string/update" android:layout_weight="1"
				android:layout_width="0dip" android:layout_height="wrap_content"
				android:layout_gravity="bottom" />
			<Button android:id="@+android:id/editNetworkDeleteButton"
				android:text="@string/delete" android:layout_weight="1"
				android:layout_width="0dip" android:layout_height="wrap_content"
				android:layout_gravity="bottom" />
			<Button android:id="@+android:id/editNetworkCancelButton2"
				android:text="@string/cancel" android:layout_weight="1"
				android:layout_width="0dip" android:layout_height="wrap_content"
				android:layout_gravity="bottom" />
		</LinearLayout>

	</LinearLayout>

</ScrollView>
